--- a/servo-tidy.toml
+++ b/servo-tidy.toml
@@ -30,11 +30,11 @@ packages = [
   "arrayvec",
   "base64",
   "cfg-if",
+  "cookie",
   "crossbeam-channel",
   "crossbeam-utils",
   "fixedbitset",
   "getrandom",
-  "h2",
   "half",
   "image",
   "itoa",
@@ -55,22 +55,16 @@ packages = [
   "rand_core",
   "redox_syscall",
   "ron",
+  "time",
   "wasi",
   "wayland-sys",
 
   # https://github.com/servo/servo/issues/26933
   "futures",
   "mio",
-  "tokio",
   "tokio-util",
-  "http-body",
   "httpdate",
-  "hyper",
   "bytes",
-  "pin-project",
-  "pin-project-lite",
-  "pin-project-internal",
-  "socket2",
 
   # https://github.com/servo/servo/pull/23288#issuecomment-494687746
   "gl_generator",
